compiler/codecache/cli tests failing when SegmentedCodeCache used with -Xint

XMLWordPrintable

    • b13

        The following tests are failing in the loom repo because SegmentedCodeCache can not be set when running with -Xint.

        compiler/codecache/cli/TestSegmentedCodeCacheOption.java
        compiler/codecache/cli/printcodecache/TestPrintCodeCacheOption.java
        compiler/codecache/cli/codeheapsize/TestCodeHeapSizeOptions.java

              Assignee:
              Coleen Phillimore
              Reporter:
              Alan Bateman
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: