8276711: compiler/codecache/cli tests failing when SegmentedCodeCache used with -Xint